tests/invalid/simple/UnionType_CompileFail_1.whiley
// this is a comment!
define IntReal as int | real

void System::main([string] args):
    IntReal x
    int y
    x = 1.23
    print str(x)
    y = x
    print str(y)

